Fix flex gap in header menu

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -154,11 +154,21 @@
   align-items: center;
   padding: 0;
   margin: 0 0 5px 0;
-  gap: 34px;
+
+  li {
+    &:not(:last-child) {
+      margin-right: 34px;
+    }
+  }
 
   @include vp-1023 {
-    gap: 24px;
     margin-top: -2px;
+
+    li {
+      &:not(:last-child) {
+        margin-right: 24px;
+      }
+    }
   }
 
   @include vp-767 {
@@ -168,12 +178,17 @@
     align-items: flex-start;
     height: 100%;
     width: 100%;
-    gap: 26px;
     padding-top: 36px;
     margin-left: 10px;
     display: none;
     max-height: 100vh;
     overflow-y: auto;
+
+    li {
+      &:not(:last-child) {
+        margin-bottom: 26px;
+      }
+    }
   }
 }
 
